# dayroll

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  arm-build.sh
backend/: Cargo.toml
backend/src/: app.rs  config.rs  db.rs  main.rs  model.rs  state.rs
backend/src/discover/: linux.rs  macos.rs  mod.rs
backend/src/routes/: health.rs  mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
