[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = ["linux-udev"]
linux-udev = ["dep:udev"]

[dependencies]
axum = "0.8.7"
diesel = { version = "2.3.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
escpos = { version = "0.17.0", features = ["barcodes", "codes_2d", "graphics", "ui"] }
icalendar = "0.17.6"
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
yew = { version = "0.22.0", features = ["csr"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
glob = "0.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
udev = { version = "0.9.3", optional = true }
glob = "0.3.3"
